--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "helmet": "^6.0.1"
+        "helmet": "^6.0.1",
+        "telegraf": "^4.12.2"
     },
     "devDependencies": {
         "@types/compression": "^1.7.2",
