--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-    "name": "crypto-bot",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "node dist/server.js",
-        "watch": "tsc -w",
-        "dev": "nodemon src/server.ts",
-        "prettier": "prettier --write ."
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bybit-api": "3.3.10",
-        "bybit-sdk": "^1.0.0",
-        "compression": "^1.7.4",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "helmet": "^6.0.1",
-        "telegraf": "^4.12.2"
-    },
-    "devDependencies": {
-        "@types/compression": "^1.7.2",
-        "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.17",
-        "@types/node": "^18.15.11",
-        "nodemon": "^2.0.22",
-        "prettier": "^2.8.7",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.0.2"
-    }
+  "name": "crypto-bot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node dist/server.js",
+    "watch": "tsc -w",
+    "dev": "nodemon src/server.ts",
+    "prettier": "prettier --write ."
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bybit-api": "3.3.10",
+    "bybit-sdk": "^1.0.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "csv-parse": "^5.3.6",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "telegraf": "^4.12.2"
+  },
+  "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
+  }
 }
