--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
