--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/server.js",
     "watch": "tsc -w",
     "dev": "nodemon src/server.ts",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "dashboard": "nodejs-dashboard -- node -r nodejs-dashboard dist/index.js"
   },
   "engines": {
     "node": ">=14.0.0",
@@ -18,22 +19,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^2.0.0-31",
     "bybit-api": "3.3.10",
     "bybit-sdk": "^1.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cron": "^2.3.0",
     "csv-parse": "^5.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "global": "^4.4.0",
     "helmet": "^6.0.1",
+    "morgan": "^1.10.0",
     "telegraf": "^4.12.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
+    "@types/cron": "^2.0.1",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
+    "nodejs-dashboard": "^0.5.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
